<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.wang.android_lib.view.ToolBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="注册" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:text="用户名"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="bottom"
            android:hint="请输入用户名"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:text="wang"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_register_head"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@mipmap/ic_login_account" />
    </LinearLayout>

    <include layout="@layout/separated_line_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="密码"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="填写密码"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:text="123"
            android:textSize="15sp" />
    </LinearLayout>

    <include layout="@layout/separated_line_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="确认密码"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="请再次填写密码"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:text="123"
            android:textSize="15sp" />
    </LinearLayout>

    <include layout="@layout/separated_line_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="昵称"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="可以不填"
            android:paddingLeft="10dp"
            android:textSize="15sp" />
    </LinearLayout>

    <include layout="@layout/separated_line_button" />

    <RadioGroup
        android:id="@+id/rg_register_sex"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_man"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:checked="true"
            android:text="男" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_woman"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="女" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_blue_selector"
        android:text="注册"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>